Add `doubleUnderscore` cursor style (#7827)
Adds a new cursor type "doubleUnderscore". Tested manually.

Closes #6786

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -505,6 +505,10 @@
     <value>Vintage ( ▃ )</value>
     <comment>{Locked="▃"}</comment>
   </data>
+  <data name="Profile_CursorShapeDoubleUnderscore.Content" xml:space="preserve">
+    <value>Double Underscore ( ‗ )</value>
+    <comment>{Locked="‗"}</comment>
+  </data>
   <data name="Profile_FontFace.Header" xml:space="preserve">
     <value>Font face</value>
   </data>
