--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -177,7 +177,7 @@
   <data name="ColorScheme_Yellow.Header" xml:space="preserve">
     <value>Yellow</value>
   </data>
-  <data name="Globals_AlwaysShowTabs.Content" xml:space="preserve">
+  <data name="Globals_AlwaysShowTabs.Header" xml:space="preserve">
     <value>Always show tabs</value>
   </data>
   <data name="Globals_AlwaysShowTabs.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -189,7 +189,7 @@
   <data name="Globals_CopyFormatting.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When checked, the color and font formatting of selected text is also copied to your clipboard. When unchecked, only plain text is copied to your clipboard.</value>
   </data>
-  <data name="Globals_CopyOnSelect.Content" xml:space="preserve">
+  <data name="Globals_CopyOnSelect.Header" xml:space="preserve">
     <value>Automatically copy selection to clipboard</value>
   </data>
   <data name="Globals_DefaultProfile.Header" xml:space="preserve">
@@ -198,20 +198,20 @@
   <data name="Globals_DefaultProfile.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Profile that opens when clicking the '+' icon or by typing the new tab key binding.</value>
   </data>
-  <data name="Globals_ForceFullRepaint.Content" xml:space="preserve">
+  <data name="Globals_ForceFullRepaint.Header" xml:space="preserve">
     <value>Redraw entire screen when display updates</value>
   </data>
   <data name="Globals_ForceFullRepaint.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When unchecked, the terminal will render only the updates to the screen between frames.</value>
   </data>
-  <data name="Globals_InitialCols.Text" xml:space="preserve">
-    <value>Columns:</value>
+  <data name="Globals_InitialCols.Header" xml:space="preserve">
+    <value>Columns</value>
   </data>
   <data name="Globals_InitialCols.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>The number of columns displayed in the window upon first load. Measured in characters.</value>
   </data>
-  <data name="Globals_InitialRows.Text" xml:space="preserve">
-    <value>Rows:</value>
+  <data name="Globals_InitialRows.Header" xml:space="preserve">
+    <value>Rows</value>
   </data>
   <data name="Globals_InitialRows.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>The number of rows displayed in the window upon first load. Measured in characters.</value>
@@ -235,37 +235,37 @@
   <data name="Globals_RenderingDisclaimer.Text" xml:space="preserve">
     <value>These settings may be useful for troubleshooting an issue, however they will impact your performance.</value>
   </data>
-  <data name="Globals_ShowTitlebar.Content" xml:space="preserve">
+  <data name="Globals_ShowTitlebar.Header" xml:space="preserve">
     <value>Hide the title bar (requires relaunch)</value>
   </data>
   <data name="Globals_ShowTitlebar.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When unchecked, the title bar will appear above the tabs.</value>
   </data>
-  <data name="Globals_ShowTitleInTitlebar.Content" xml:space="preserve">
+  <data name="Globals_ShowTitleInTitlebar.Header" xml:space="preserve">
     <value>Use active terminal title as application title</value>
   </data>
   <data name="Globals_ShowTitleInTitlebar.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When unchecked, the title bar will be 'Windows Terminal'.</value>
   </data>
-  <data name="Globals_SnapToGridOnResize.Content" xml:space="preserve">
+  <data name="Globals_SnapToGridOnResize.Header" xml:space="preserve">
     <value>Snap window resizing to character grid</value>
   </data>
   <data name="Globals_SnapToGridOnResize.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When unchecked, the window will resize smoothly.</value>
   </data>
-  <data name="Globals_SoftwareRendering.Content" xml:space="preserve">
+  <data name="Globals_SoftwareRendering.Header" xml:space="preserve">
     <value>Use software rendering</value>
   </data>
   <data name="Globals_SoftwareRendering.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When checked, the terminal will use the software renderer (a.k.a. WARP) instead of the hardware one.</value>
   </data>
-  <data name="Globals_StartOnUserLogin.Content" xml:space="preserve">
+  <data name="Globals_StartOnUserLogin.Header" xml:space="preserve">
     <value>Launch on machine startup</value>
   </data>
   <data name="Globals_StartOnUserLogin.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>When checked, this enables the launch of Windows Terminal at machine startup.</value>
   </data>
-  <data name="Globals_AlwaysOnTop.Content" xml:space="preserve">
+  <data name="Globals_AlwaysOnTop.Header" xml:space="preserve">
     <value>Always on top</value>
   </data>
   <data name="Globals_AlwaysOnTop.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -338,7 +338,7 @@
   <data name="Profile_Advanced.Header" xml:space="preserve">
     <value>Advanced</value>
   </data>
-  <data name="Profile_AltGrAliasing.Content" xml:space="preserve">
+  <data name="Profile_AltGrAliasing.Header" xml:space="preserve">
     <value>AltGr aliasing</value>
   </data>
   <data name="Profile_AltGrAliasing.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -536,7 +536,7 @@
   <data name="Profile_General.Header" xml:space="preserve">
     <value>General</value>
   </data>
-  <data name="Profile_Hidden.Content" xml:space="preserve">
+  <data name="Profile_Hidden.Header" xml:space="preserve">
     <value>Hide profile from dropdown</value>
   </data>
   <data name="Profile_Hidden.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -563,7 +563,7 @@
   <data name="Profile_Padding.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Sets the padding around the text within the window.</value>
   </data>
-  <data name="Profile_RetroTerminalEffect.Content" xml:space="preserve">
+  <data name="Profile_RetroTerminalEffect.Header" xml:space="preserve">
     <value>Retro terminal effects</value>
   </data>
   <data name="Profile_RetroTerminalEffect.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -584,7 +584,7 @@
   <data name="Profile_SelectionBackgroundColorToolTip.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Sets the background color of selected text. Overrides the selection background set in the color scheme.</value>
   </data>
-  <data name="Profile_SnapOnInput.Content" xml:space="preserve">
+  <data name="Profile_SnapOnInput.Header" xml:space="preserve">
     <value>Scroll to input when typing</value>
   </data>
   <data name="Profile_StartingDirectory.Header" xml:space="preserve">
@@ -602,7 +602,7 @@
   <data name="Profile_StartingDirectoryUseParentCheckbox.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>If checked, this profile will spawn in the directory from which Windows Terminal was launched.</value>
   </data>
-  <data name="Profile_SuppressApplicationTitle.Content" xml:space="preserve">
+  <data name="Profile_SuppressApplicationTitle.Header" xml:space="preserve">
     <value>Suppress title changes</value>
   </data>
   <data name="Profile_SuppressApplicationTitle.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -614,7 +614,7 @@
   <data name="Profile_TabTitle.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Replaces the profile name as the title to pass to the shell on startup.</value>
   </data>
-  <data name="Profile_UseAcrylic.Content" xml:space="preserve">
+  <data name="Profile_UseAcrylic.Header" xml:space="preserve">
     <value>Enable acrylic</value>
   </data>
   <data name="Profile_UseAcrylic.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
@@ -664,7 +664,7 @@
   <data name="Profile_BellStyleNone.Content" xml:space="preserve">
     <value>None</value>
   </data>
-  <data name="Globals_DisableAnimations.Content" xml:space="preserve">
+  <data name="Globals_DisableAnimations.Header" xml:space="preserve">
     <value>Disable pane animations</value>
   </data>
   <data name="Profile_FontWeightBlack.Content" xml:space="preserve">
