Add support for "focus follows mouse" mode (#8965)
## PR Checklist
* [x] Closes #6459
* [x] CLA signed.
* [ ] Tests added/passed
* [x] Documentation updated here: https://github.com/MicrosoftDocs/terminal/pull/248
* [x] Schema updated.
* [x] I've discussed this with core contributors already.

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -825,4 +825,10 @@
     <value>a lower layer</value>
     <comment>This is the object of "SettingContainer_OverrideIntro".</comment>
   </data>
+  <data name="Globals_FocusFollowMouse.Header" xml:space="preserve">
+    <value>Enable Focus Follow Mouse mode</value>
+  </data>
+  <data name="Globals_FocusFollowMouse.HelpText" xml:space="preserve">
+    <value>When checked, the terminal will the focus pane on mouse hover.</value>
+  </data>
 </root>
