Introduce setting override tracking and update SettingContainer (#9079)
This PR adds improved override message generation for inheritance in
SUI. The settings model now has an `OriginTag` to be able to denote
where a `Profile` came from. This tag is used in the `SettingContainer`
to generate a more specific override message.

## References
#6800 - SUI Epic
#8919 - SUI Inheritance PR
#8804 - SUI Inheritance (old issue)

## Detailed Description of the Pull Request / Additional comments
- **Terminal Settings Model**
  - Introduced `PROJECTED_SETTING` as a macro to more easily declare the
    functions for each setting
  - Introduced `<setting>OverrideSource` which finds the `Profile` that
    has \<setting\> defined
  - Introduced `OriginTag Profile::Origin {Custom, InBox, Generated}` to
    trace where a profile came from
  - `DefaultProfileUtils` creates profiles for profile generators. So
    that now sets the `Origin` tag to `Generated`
  - `CascadiaSettings::LoadDefaults()` tags all profiles created as
    `InBox`.
  - The view model had to ingest the API change to be able to interact
    with `<setting>OverrideSource`
- **Override Message Generation**
  - The reset button now has a more specific tooltip
  - The reset button now only appears if base layer is being overridden
  - We use the settings model changes to determine the message to
    display for the target

## Validation Steps Performed
Tested the following cases:
- overrides nothing (inherited setting)
- overrides value inherited from...
  - base layer
  - a profile generator
  - in-box profile
- global settings should not have this feature

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -829,27 +829,24 @@
   <data name="ColorScheme_RenameErrorTip.Title" xml:space="preserve">
     <value>This color scheme name is already in use.</value>
   </data>
-  <data name="SettingContainer_OverrideIntro" xml:space="preserve">
-    <value>This overrides the value in {}.</value>
-    <comment>"{}" is the object being overridden. Generally, it will be the name of another profile.</comment>
-  </data>
-  <data name="SettingContainer_ResetButtonHelpText" xml:space="preserve">
-    <value>Reset</value>
-  </data>
-  <data name="SettingContainer_OverrideTarget" xml:space="preserve">
-    <value>a lower layer</value>
-    <comment>This is the object of "SettingContainer_OverrideIntro".</comment>
-  </data>
   <data name="Globals_FocusFollowMouse.Header" xml:space="preserve">
     <value>Automatically focus pane on mouse hover</value>
   </data>
   <data name="Globals_DisableAnimationsReversed.Header" xml:space="preserve">
     <value>Pane animations</value>
   </data>
+  <data name="SettingContainer_OverrideMessageBaseLayer" xml:space="preserve">
+    <value>Reset to base layer value.</value>
+    <comment>"base layer" should match Nav_ProfileDefaults.Content's text</comment>
+  </data>
   <data name="ColorScheme_TerminalColorsHeader.Text" xml:space="preserve">
     <value>Terminal colors</value>
   </data>
   <data name="ColorScheme_SystemColorsHeader.Text" xml:space="preserve">
     <value>System colors</value>
+  </data>
+  <data name="SettingContainer_OverrideMessageFragmentExtension" xml:space="preserve">
+    <value>Reset to value from: {}</value>
+    <comment>{} is replaced by the name of another profile or generator.</comment>
   </data>
 </root>
